--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,6 +4,10 @@
     background-image: radial-gradient(aqua 10%, oklch(42.4% 0.199 265.638) 70%);
 }
 
+.innerShadow{
+   box-shadow: inset 0 2px 8px rgba(0, 0, 0, 0.3);
+}
+
 .sectionLink {
   transition: transform 0.3s ease;
 }
